--- a/DemographicIndicators/DemographicIndicators.csproj
+++ b/DemographicIndicators/DemographicIndicators.csproj
@@ -46,7 +46,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsNatalidad.cs" />
+    <Compile Include="Clases\clsMortalidad.cs" />
+    <Compile Include="Clases\clsNatalidad.cs" />
+    <Compile Include="Clases\clsTasasMortalidad.cs" />
+    <Compile Include="frmTasasMortalidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>frmTasasMortalidad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmMenuMortalidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMenuMortalidad.Designer.cs">
+      <DependentUpon>frmMenuMortalidad.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSubMenuMigratorio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +111,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMenuMortalidad.resx">
+      <DependentUpon>frmMenuMortalidad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSubMenuMigratorio.resx">
       <DependentUpon>frmSubMenuMigratorio.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNatalidad.resx">
       <DependentUpon>frmNatalidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTasasMortalidad.resx">
+      <DependentUpon>frmTasasMortalidad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
